--- a/style/style.scss
+++ b/style/style.scss
@@ -97,4 +97,6 @@ canvas[data-ref=main_canvas] {
   position: absolute;
   left: 0;
   top: 0;
+  width: 100%;
+  height: 100%;
 }
